# attention-holder

./: Cargo.toml  README.md
examples/mockup/: mockup.html
src/: html.rs  main.rs  pdf.rs  script.js  style.css
tests/: open_pdf.rs
tests/common/: mod.rs
