[package]
name = "attention-holder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.17.0", features = ["png"] }
clap = { version = "4.2.4", features = ["derive"] }
poppler-rs = "0.21.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
